--- a/package.json
+++ b/package.json
@@ -40,49 +40,48 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
     "@intlify/unplugin-vue-i18n": "^2.0.0",
-    "@rushstack/eslint-patch": "^1.6.1",
-    "@typescript-eslint/parser": "^6.18.1",
-    "@vitejs/plugin-vue": "^5.0.3",
+    "@rushstack/eslint-patch": "^1.7.2",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vueuse/core": "^10.7.2",
-    "autoprefixer": "^10.4.16",
-    "axios": "^1.6.5",
+    "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
     "big.js": "^6.2.1",
-    "cbor2": "^1.1.0",
-    "date-fns": "^3.2.0",
-    "electron": "^28.1.3",
+    "cbor2": "^1.2.2",
+    "date-fns": "^3.3.1",
+    "electron": "^28.2.2",
     "electron-builder": "^24.9.1",
     "electron-devtools-installer": "^3.2.0",
-    "element-plus": "^2.5.1",
+    "element-plus": "^2.5.5",
     "eslint": "^8.56.0",
     "eslint-import-resolver-alias": "1.1.2",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-vue": "9.20.0",
+    "eslint-plugin-vue": "9.21.1",
     "fs-extra": "^11.2.0",
-    "lint-staged": "^15.2.0",
-    "postcss": "^8.4.33",
-    "prettier": "3.1.1",
+    "lint-staged": "^15.2.2",
+    "postcss": "^8.4.35",
+    "prettier": "3.2.5",
     "progress-stream": "^2.0.0",
     "rpc-websockets": "^7.9.0",
-    "sass": "^1.69.7",
-    "semver": "^7.5.4",
+    "sass": "^1.70.0",
+    "semver": "^7.6.0",
     "tar": "^6.2.0",
     "tree-kill": "^1.2.2",
     "typescript": "^5.3.3",
-    "unocss": "^0.58.3",
-    "unplugin-auto-import": "^0.17.3",
+    "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
     "uuid": "^9.0.1",
-    "vite": "^5.0.11",
-    "vite-plugin-electron": "^0.28.0-beta.2",
+    "vite": "^5.1.1",
+    "vite-plugin-electron": "^0.28.2",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vite-svg-loader": "^5.1.0",
-    "vue": "^3.4.10",
-    "vue-i18n": "^9.9.0",
+    "vue": "3.4.18",
+    "vue-i18n": "^9.9.1",
     "vue-json-tree": "^0.4.3",
     "vue-observe-visibility": "^1.0.0",
     "vue-router": "^4.2.5",
