--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,7 +1,7 @@
-name: Release a draft release 
+name: Release a draft release
 
-on: 
-  push: 
+on:
+  push:
     tags:
       - '*'
 
@@ -10,11 +10,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
 
-    strategy: 
+    strategy:
       matrix:
         os: [
-          macos-latest, 
-          ubuntu-latest, 
+          macos-latest,
+          ubuntu-latest,
           windows-latest
         ]
 
@@ -26,11 +26,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.11.0
-      
+
       - uses: pnpm/action-setup@v3
         with:
           version: 8
-      
+
+      - name: Install Snapcraft
+        uses: samuelmeuli/action-snapcraft@v2
+
       - name: Build & release Electron app
         shell: bash
         env:
@@ -45,6 +48,7 @@ jobs:
         run: |
           pnpm install
           pnpm build
+
       - name: Upload artifact
         uses: actions/upload-artifact@v1.0.0
         with:
