--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: Release a draft release
+name: Release Draft
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - '*'
 
 jobs:
-  release:
+  Build:
     runs-on: ${{ matrix.os }}
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
 
@@ -19,19 +19,20 @@ jobs:
         ]
 
     steps:
-      - name: Check out Git repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Node.js, NPM and Yarn
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20.11.0
 
-      - uses: pnpm/action-setup@v3
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
         with:
           version: 8
 
-      - name: Build & release Electron app
+      - name: Build
         shell: bash
         env:
           # macOS Code signing certificates
@@ -49,7 +50,23 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          # Artifact name
           name: ${{ matrix.os }}-artifact
-          # Directory containing files to upload
-          path: release/**/*
+          path: |
+            release/**/*
+            !release/**/*.blockmap
+
+  Draft:
+    runs-on: ubuntu-latest
+    needs: [Build]
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ matrix.os }}-artifact
+          path: release
+
+      - name: Create Draft
+        uses: ncipollo/release-action@v1
+          with:
+            artifacts: "release/**/*"
+            draft: true
