--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -62,7 +62,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: "*-artifact"
+          pattern: "*artifact"
           path: release
 
       - name: Create Draft
