--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "productName": "Sheikah-Witnet-wallet",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/witnet/sheikah.git"
+    "url": "git+https://github.com/gabaldon/sheikah.git"
   },
   "volta": {
     "node": "20.9.0"
@@ -69,7 +69,7 @@
     "cbor2": "^1.7.0",
     "date-fns": "^3.6.0",
     "electron": "^32.2.0",
-    "electron-builder": "^25.1.7",
+    "electron-builder": "^25.1.8",
     "electron-devtools-installer": "^3.2.0",
     "electron-log": "^5.2.0",
     "electron-updater": "^6.3.9",
