--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,8 +14,8 @@ jobs:
       matrix:
         os: [
           macos-latest,
-          ubuntu-latest,
-          windows-latest
+          # ubuntu-latest,
+          # windows-latest
         ]
 
     steps:
@@ -47,6 +47,7 @@ jobs:
         run: |
           pnpm install
           pnpm build --publish="never"
+          stapler validate release/1.12.1/mac-arm64/Sheikah-Witnet-wallet.app
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
