--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -15,10 +15,13 @@
     "artifactName": "${productName}-${version}.${ext}",
     "entitlements": "build/entitlements.mac.plist",
     "entitlementsInherit": "build/entitlements.mac.plist",
-    hardenedRuntime: true,
-    "target": [
-      "default"
-    ]
+    "hardenedRuntime": true,
+    "target": "dmg",
+    "gatekeeperAssess": false,
+    "notarize": false,
+  },
+  "dmg": {
+    "sign": false
   },
   "afterSign": "scripts/notarize.cjs",
   "win": {
